[tool.poetry]
name = "snakegame"
version = "0.1.0"
description = "my snake game built using pygame"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygame = "2.6.0"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
